--- a/Diwen.Xbrl/Diwen.Xbrl.nuspec
+++ b/Diwen.Xbrl/Diwen.Xbrl.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>Diwen.Xbrl</id>
-    <version>1.0.0</version>
+    <version>1.0.0-beta</version>
     <authors>John Nordberg</authors>
     <owners>diwen</owners>
     <licenseUrl>http://www.gnu.org/licenses/lgpl.txt</licenseUrl>
