--- a/Diwen.Xbrl/Diwen.Xbrl.nuspec
+++ b/Diwen.Xbrl/Diwen.Xbrl.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>Diwen.Xbrl</id>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <authors>John Nordberg</authors>
     <owners>diwen</owners>
     <licenseUrl>http://www.gnu.org/licenses/lgpl.txt</licenseUrl>
@@ -13,9 +13,7 @@ Please consider giving feedback if you use the library in your own software proj
     <frameworkAssemblies>
       <frameworkAssembly assemblyName="System.XML" targetFramework=".NETFramework4.5.2" />
     </frameworkAssemblies>
-    <releaseNotes>bug fixes:
-extensionmethods should be in their own namespace #59
-Namespaces of unused units aren't removed #60</releaseNotes>
+    <releaseNotes></releaseNotes>
     <copyright>Copyright 2015-2018 John Nordberg</copyright>
     <tags>.NET XBRL</tags>
   </metadata>
