Update .csproj to use new format for license

--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -29,7 +29,7 @@
   <PropertyGroup>
     <Authors>John Nordberg</Authors>
     <Owners>diwen</Owners>
-    <PackageLicenseUrl>http://www.gnu.org/licenses/lgpl.txt</PackageLicenseUrl>
+    <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/dgm9704/Xoxo</PackageProjectUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Description>.NET library for reading, writing and comparing XBRL instances.
