Update test data

--- a/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
+++ b/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
@@ -19,13 +19,13 @@
   
   <ItemGroup>
     <Content Include="data/*.xbrl" />
-    <Content Include="fi-sbr/*.*" />
+    <Content Include="eba/*.*" />
     <Content Include="eiopa/*.*" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Update="data/*.xbrl" CopyToOutputDirectory="PreserveNewest" />
-    <Content Update="fi-sbr/*.*" CopyToOutputDirectory="PreserveNewest" />
+    <Content Update="eba/*.*" CopyToOutputDirectory="PreserveNewest" />
     <Content Update="eiopa/*.*" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
