#67 exploratory ixbrl parsing

--- a/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
+++ b/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
@@ -21,12 +21,14 @@
     <Content Include="data/*.xbrl" />
     <Content Include="eba/*.*" />
     <Content Include="eiopa/*.*" />
+    <Content Include="esma/*.*" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Update="data/*.xbrl" CopyToOutputDirectory="PreserveNewest" />
     <Content Update="eba/*.*" CopyToOutputDirectory="PreserveNewest" />
     <Content Update="eiopa/*.*" CopyToOutputDirectory="PreserveNewest" />
+    <Content Update="esma/*.*" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
