#69 Drop support for .NET Framework 4.5.2

--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -1,25 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
-
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Version>1.1.0</Version>
-
-    <!-- Add the myget feed, without altering any other configurations. -->
-    <RestoreAdditionalProjectSources>https://dotnet.myget.org/F/dotnet-core/api/v3/index.json</RestoreAdditionalProjectSources>
   </PropertyGroup>
-  
-  <PropertyGroup Condition="'$(TargetFramework)'== 'net452'">
-    <!-- Make .NET 4.5.2 reference assemblies available even on Linux -->
-    <FrameworkPathOverride>$(NuGetPackageRoot)microsoft.targetingpack.netframework.v4.5.2/1.0.1/lib/net452/</FrameworkPathOverride>
-  </PropertyGroup>
-  
-  <ItemGroup Condition="'$(TargetFramework)'== 'net452'">
-    <!-- Make sure the reference assemblies are available -->
-    <PackageReference Include="Microsoft.TargetingPack.NETFramework.v4.5.2"
-                      Version="1.0.1" ExcludeAssets="All" PrivateAssets="All" />
-    <!-- The DLL case has changed between 4.5 and 4.6; this avoids a warning. -->
-    <Reference Include="System.XML" />
-  </ItemGroup>
 
   <ItemGroup>
     <Content Include="COPYING.txt" />
