Disabling ESEF Tests until fully implemented

--- a/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
+++ b/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
@@ -18,17 +18,10 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Content Include="data/*.xbrl" />
-    <Content Include="eba/*.*" />
-    <Content Include="eiopa/*.*" />
-    <Content Include="esma/*.*" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Update="data/*.xbrl" CopyToOutputDirectory="PreserveNewest" />
-    <Content Update="eba/*.*" CopyToOutputDirectory="PreserveNewest" />
-    <Content Update="eiopa/*.*" CopyToOutputDirectory="PreserveNewest" />
-    <Content Update="esma/*.*" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="data/*.xbrl" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="eba/*.*" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="eiopa/*.*" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="esma/*.*" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
   <ItemGroup>
