#73 some metadata updates

--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -4,21 +4,17 @@
     <Version>1.1.2</Version>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Content Include="COPYING.txt" />
-    <Content Include="COPYING.LESSER.txt" />
-  </ItemGroup>
-
   <PropertyGroup>
     <Authors>John Nordberg</Authors>
     <Owners>diwen</Owners>
     <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/dgm9704/Xoxo</PackageProjectUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Description>.NET library for reading, writing and comparing XBRL instances.
+    <Description>.NET library for reading, writing and comparing XBRL reports.
 Please consider giving feedback if you use the library in your own software projects.</Description>
     <PackageReleaseNotes></PackageReleaseNotes>
     <Copyright>Copyright 2015-2021 John Nordberg</Copyright>
-    <PackageTags>.NET XBRL</PackageTags>
+    <PackageTags>.NET XBRL iXBRL XBRL-CSV</PackageTags>
   </PropertyGroup>
+
 </Project>
