--- a/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
+++ b/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
@@ -7,15 +7,23 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-		<PackageReference Include="xunit" Version="2.4.1" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		  <PrivateAssets>all</PrivateAssets>
+		<PackageReference
+				Include="Microsoft.NET.Test.Sdk"
+				Version="17.1.0" />
+		<PackageReference
+				Include="xunit"
+				Version="2.4.1" />
+		<PackageReference
+				Include="xunit.runner.visualstudio"
+				Version="2.4.3">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="coverlet.collector" Version="3.1.2">
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		  <PrivateAssets>all</PrivateAssets>
+		<PackageReference
+				Include="coverlet.collector"
+				Version="3.1.2">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 	</ItemGroup>
 
@@ -24,14 +32,27 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Content Include="data/*.xbrl" CopyToOutputDirectory="PreserveNewest" />
-		<Content Include="eba/*.*" CopyToOutputDirectory="PreserveNewest" />
-		<Content Include="eiopa/*.*" CopyToOutputDirectory="PreserveNewest" />
-		<Content Include="esma/*.*" CopyToOutputDirectory="PreserveNewest" />
+		<Content
+				Include="data/*.xbrl"
+				CopyToOutputDirectory="PreserveNewest" />
+		<Content
+				Include="eba/*.*"
+				CopyToOutputDirectory="PreserveNewest" />
+		<Content
+				Include="eiopa/*.*"
+				CopyToOutputDirectory="PreserveNewest" />
+		<Content
+				Include="esma/*.*"
+				CopyToOutputDirectory="PreserveNewest" />
+		<Content
+				Include="csv/*.*"
+				CopyToOutputDirectory="PreserveNewest" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
+		<Content
+				Include="xunit.runner.json"
+				CopyToOutputDirectory="PreserveNewest" />
 	</ItemGroup>
 
 </Project>
