--- a/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
+++ b/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
@@ -1,58 +1,32 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-
-		<IsPackable>false</IsPackable>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<PackageReference
-				Include="Microsoft.NET.Test.Sdk"
-				Version="17.1.0" />
-		<PackageReference
-				Include="xunit"
-				Version="2.4.1" />
-		<PackageReference
-				Include="xunit.runner.visualstudio"
-				Version="2.4.3">
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
-		<PackageReference
-				Include="coverlet.collector"
-				Version="3.1.2">
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\Diwen.Xbrl\Diwen.Xbrl.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Content
-				Include="data/*.xbrl"
-				CopyToOutputDirectory="PreserveNewest" />
-		<Content
-				Include="eba/*.*"
-				CopyToOutputDirectory="PreserveNewest" />
-		<Content
-				Include="eiopa/*.*"
-				CopyToOutputDirectory="PreserveNewest" />
-		<Content
-				Include="esma/*.*"
-				CopyToOutputDirectory="PreserveNewest" />
-		<Content
-				Include="csv/*.*"
-				CopyToOutputDirectory="PreserveNewest" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Content
-				Include="xunit.runner.json"
-				CopyToOutputDirectory="PreserveNewest" />
-	</ItemGroup>
-
+<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
+    <IsPackable>false</IsPackable>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0"/>
+    <PackageReference Include="xunit" Version="2.4.1"/>
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="coverlet.collector" Version="3.1.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="System.Text.Json" Version="7.0.0"/>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Diwen.Xbrl\Diwen.Xbrl.csproj"/>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="data/*.xbrl" CopyToOutputDirectory="PreserveNewest"/>
+    <Content Include="eba/*.*" CopyToOutputDirectory="PreserveNewest"/>
+    <Content Include="eiopa/*.*" CopyToOutputDirectory="PreserveNewest"/>
+    <Content Include="esma/*.*" CopyToOutputDirectory="PreserveNewest"/>
+    <Content Include="csv/*.*" CopyToOutputDirectory="PreserveNewest"/>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest"/>
+  </ItemGroup>
 </Project>
