--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -17,4 +17,12 @@ Please consider giving feedback if you use the library in your own software proj
 		<PackageTags>.NET XBRL iXBRL XBRL-CSV</PackageTags>
 	</PropertyGroup>
 
+	<Target Name="Date" BeforeTargets="BeforeBuild">
+    <WriteLinesToFile File="$(IntermediateOutputPath)gen.cs" Lines="static partial class Builtin { public static long CompileTime = $([System.DateTime]::UtcNow.Ticks) %3B }" Overwrite="true" />
+    <ItemGroup>
+        <Compile Include="$(IntermediateOutputPath)gen.cs" />
+    </ItemGroup>
+	</Target>
+
+
 </Project>
