--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>1.3.0</Version>
+		<TargetFramework>net6.0</TargetFramework>
+		<Version>2.0.0</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -11,17 +11,19 @@
 		<PackageProjectUrl>https://github.com/dgm9704/Xoxo</PackageProjectUrl>
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<Description>.NET library for reading, writing and comparing XBRL reports.
-Please consider giving feedback if you use the library in your own software projects.</Description>
+			Please consider giving feedback if you use the library in your own software projects.</Description>
 		<PackageReleaseNotes></PackageReleaseNotes>
-		<Copyright>Copyright 2015-2022 John Nordberg</Copyright>
+		<Copyright>Copyright 2015-2023 John Nordberg</Copyright>
 		<PackageTags>.NET XBRL iXBRL XBRL-CSV</PackageTags>
 	</PropertyGroup>
 
 	<Target Name="Date" BeforeTargets="BeforeBuild">
-    <WriteLinesToFile File="$(IntermediateOutputPath)gen.cs" Lines="static partial class Builtin { public static long CompileTime = $([System.DateTime]::UtcNow.Ticks) %3B }" Overwrite="true" />
-    <ItemGroup>
-        <Compile Include="$(IntermediateOutputPath)gen.cs" />
-    </ItemGroup>
+		<WriteLinesToFile File="$(IntermediateOutputPath)gen.cs"
+			Lines="static partial class Builtin { public static long CompileTime = $([System.DateTime]::UtcNow.Ticks) %3B }"
+			Overwrite="true" />
+		<ItemGroup>
+			<Compile Include="$(IntermediateOutputPath)gen.cs" />
+		</ItemGroup>
 	</Target>
 
 
