#78 start adding support for xBRL-JSON

--- a/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
+++ b/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
@@ -25,6 +25,7 @@
     <Content Include="eiopa/*.*" CopyToOutputDirectory="Always" />
     <Content Include="esma/*.*" CopyToOutputDirectory="Always" />
     <Content Include="csv/*.*" CopyToOutputDirectory="Always" />
+    <Content Include="json/*.*" CopyToOutputDirectory="Always" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="xunit.runner.json" CopyToOutputDirectory="Always" />
