--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
-		<Version>2.0.0</Version>
+		<Version>2.1.0</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -13,8 +13,8 @@
 		<Description>.NET library for reading, writing and comparing XBRL reports.
 			Please consider giving feedback if you use the library in your own software projects.</Description>
 		<PackageReleaseNotes></PackageReleaseNotes>
-		<Copyright>Copyright 2015-2023 John Nordberg</Copyright>
-		<PackageTags>.NET XBRL iXBRL XBRL-CSV</PackageTags>
+		<Copyright>Copyright 2015-2024 John Nordberg</Copyright>
+		<PackageTags>XBRL iXBRL XBRL-XML XBRL-CSV XBRL-JSON</PackageTags>
 	</PropertyGroup>
 
 	<Target Name="Date" BeforeTargets="BeforeBuild">
