breaking changes to naming, namespaces, and organization

--- a/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
+++ b/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
@@ -20,12 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="www.eba.europa.eu/**" CopyToOutputDirectory="Always" />
-    <Content Include="data/*.xbrl" CopyToOutputDirectory="Always" />
-    <Content Include="eba/*.*" CopyToOutputDirectory="Always" />
-    <Content Include="eiopa/*.*" CopyToOutputDirectory="Always" />
-    <Content Include="esma/*.*" CopyToOutputDirectory="Always" />
-    <Content Include="csv/*.*" CopyToOutputDirectory="Always" />
-    <Content Include="json/*.*" CopyToOutputDirectory="Always" />
+    <Content Include="data/**" CopyToOutputDirectory="Always" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="xunit.runner.json" CopyToOutputDirectory="Always" />
