breaking changes to naming, namespaces, and organization

--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -10,7 +10,7 @@
 		<PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/dgm9704/Xoxo</PackageProjectUrl>
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-		<Description>.NET library for reading, writing and comparing XBRL reports.
+		<Description>.NET library for reading, writing, comparing, and converting XBRL reports.
 			Please consider giving feedback if you use the library in your own software projects.</Description>
 		<PackageReleaseNotes></PackageReleaseNotes>
 		<Copyright>Copyright 2015-2024 John Nordberg</Copyright>
